[project]
name = "kozzle-tts"
version = "0.1.0"
description = "Korean TTS generator using Qwen3-TTS on Apple Silicon"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx-audio",
    "mlx>=0.30",
    "soundfile>=0.13",
    "librosa>=0.11",
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
kozzle-tts = "kozzle_tts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kozzle_tts"]